@@ -251,14 +251,14 @@ sub xst_parse_split_ref
       else
       {
         &xst_report_leave ();
-        close $fd;
+        &xst_file_close ($fd);
         return \$line[0];
       }
     }
   }
 
   &xst_report_leave ();
-  close $fd;
+  &xst_file_close ($fd);
   return \@res if ($all);
   return -1;
 }
@@ -395,7 +395,7 @@ sub xst_parse_split_hash
     $res{$key} = [ split ($value_re, $line[0]) ];
   }
 
-  close $fd;
+  &xst_file_close ($fd);
   &xst_report_leave ();
   return undef if (scalar keys (%res) == 0);
   return \%res;
@@ -426,7 +426,7 @@ sub xst_parse_split_hash_with_continuation
     $res{$key} = [ split ($value_re, $line[0]) ];
   }
 
-  close $fd;
+  &xst_file_close ($fd);
   &xst_report_leave ();
   return undef if (scalar keys (%res) == 0);
   return \%res;
@@ -591,7 +591,7 @@ sub xst_parse_line_first
   return undef if !$fd;
 
   chomp ($res = <$fd>);
-  close $fd;
+  &xst_file_close ($fd);
   return $res;
 }
 
@@ -629,13 +629,13 @@ sub xst_parse_chat
       # If it looks like what we're looking for, return what matched the parens.
       if ($found =~ /$re/i)
       {
-        close $fd;
+        &xst_file_close ($fd);
         return $1;
       }
     }
   }
   
-  close $fd;
+  &xst_file_close ($fd);
   # Oops: not found.
   return undef;
 }
@@ -690,7 +690,7 @@ sub xst_parse_ini_sections
     push @sections, $1 if (/\[([^\]]+)\]/i);
   }
 
-  close $fd;
+  &xst_file_close ($fd);
 
   return @sections;
 }
@@ -726,7 +726,7 @@ sub xst_parse_ini
     }
   }
 
-  close $fd;
+  &xst_file_close ($fd);
 
   return $res;
 }
@@ -788,7 +788,7 @@ sub xst_parse_cap_sections
     push @sections, $1 if (/^([^:|]+)/i);
   }
 
-  close $fd;
+  &xst_file_close ($fd);
   return @sections;
 }
 
@@ -824,7 +824,7 @@ sub xst_parse_cap
 #    }
   }
 
-  close $fd;
+  &xst_file_close ($fd);
   return $res;
 }
 
@@ -853,7 +853,7 @@ sub xst_parse_cap_bool
     }
   }
 
-  close $fd;
+  &xst_file_close ($fd);
   return $res;
 }
 
@@ -1133,7 +1133,7 @@ sub xst_parse_interfaces_stanzas
     push @res, $_;
   }
 
-  close $fd;
+  &xst_file_close ($fd);
 
   return @res;
 }
